--- a/experimentation/experimentation.tex
+++ b/experimentation/experimentation.tex
@@ -1,6 +1,7 @@
-\chapter{Experimentation}
-In this chapter we experiment with the MultiChain community implemented within Tribler.
-We test if MultiChain is correctly implemented according to the design.
+\chapter{Implementation and experiments}
+The design of MultiChain in the previous chapter has been fully implemented.
+In this chapter we test if MultiChain is correctly implemented according to the design
+and we experiment the MultiChain in various scenarios.
 MultiChain is experimented with to test if it can correctly create a chain tracking a download.
 Next, MultiChain is experimented with tracking anonymous downloads.
 Finally, MultiChain is experimented with in potential situations where a deadlock may occur
