--- a/experimentation/singlerequest/singlerequest.tex
+++ b/experimentation/singlerequest/singlerequest.tex
@@ -16,7 +16,7 @@ The result of the experiment were also validated using the databases of both nod
 
 The output also shows behaviour of MultiChain
 to correctly exclude any other execution from entering mutual exclusive code.
-The lines related to the mutual exclusion are prepended by "Chain Excl".
+The lines related to the mutual exclusion are prepended by "Chain Exclusion".
 The nodes check if it is possible to enter the mutual exclusive part and correctly acquires
 and releases the mutual exclusion token.
 
