Pouwelse revisions: problems

--- a/problems/problems.tex
+++ b/problems/problems.tex
@@ -1,7 +1,7 @@
 \chapter{Known vulnerabilities}
 \label{problems}
 There are several known security vulnerabilities with the current design.
-As said in section \ref{pb-aim}, an incremental approach was taken.
+As said in section \ref{pb-aim}, an incremental approach was taken and a lot of work is left.
 As such, the design is part of a bigger system that as a whole is to be developed,
 before it can be deployed in the real world.
 The current implementation is not yet ready to fully replace BarterCast as a reputation system.
