--- a/experimentation/anonymous-integrated/anonymous-integrated-experiment.tex
+++ b/experimentation/anonymous-integrated/anonymous-integrated-experiment.tex
@@ -20,7 +20,7 @@ The result of the experiment can be seen in Figure \ref{fig:integrated-anonymous
 This shows that MultiChain does track the amount of upload and download for all peers in the network.
 The hops roughly download and upload the same amount of their data.
 This is what we expected as they just relay the data.
-The seeder and leecher respectively only uploads and downloads.
+The seeder and downloader respectively only uploads and downloads.
 
 Timeouts can be seen in the plots where the plot discontinues and does not grow steadily.
 The reason these timeouts occur is that thresholds of the scheduler of every node is now reached at the same time resulting in a timeout.
