--- a/experimentation/experimentation.tex
+++ b/experimentation/experimentation.tex
@@ -42,7 +42,7 @@ as explained in section \ref{sect:bartercast}
 \section{Tracking download and upload amounts}
 In this section we will experiment with MultiChain creating blocks and tracking download and upload amounts of peers.
 We will first start with creating a simple block in an experiment.
-The next experiment is to try to create a chain of blocks with mimicking a download of 10MB
+The next experiment is to try to create a chain of blocks with simulating a download of 10MB
 and a larger download of 10GB.
 Downloads are done at different download speeds and an experiment was done to test MultiChain in this environment.
 
@@ -53,7 +53,7 @@ Downloads are done at different download speeds and an experiment was done to te
 \section{Tracking anonymous data transfer}
 In this section we will experiment with MultiChain tracking anonymous data transfer.
 Anonymous data transfer is a more complicated environment,
-where multiple peers work together to transfer data from the seeder to the leecher.
+where multiple peers work together to transfer data from the seeder to the downloader.
 We experiment in a synthetic environment and in environment using real anonymous downloads between peers.
 
 \input{experimentation/anonymous/anonymous-experiment.tex}
