--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -250,6 +250,23 @@
 	group           = {PDS}
 }
 
+@inproceedings{acquisti-economics,
+  title={On the economics of anonymity},
+  author={Acquisti, Alessandro and Dingledine, Roger and Syverson, Paul},
+  booktitle={Financial Cryptography},
+  pages={84--102},
+  year={2003},
+  organization={Springer}
+}
+
+@inproceedings{dingledine-reputation,
+  title={Reputation in p2p anonymity systems},
+  author={Dingledine, Roger and Mathewson, Nick and Syverson, Paul},
+  booktitle={Workshop on economics of peer-to-peer systems},
+  volume={92},
+  year={2003}
+}
+
 @article{Adar-Freeriding,
   title={Free riding on Gnutella},
   author={Adar, Eytan and Huberman, Bernardo A},
