Synthetic experimentation better explained.

--- a/design/anonymity.tex
+++ b/design/anonymity.tex
@@ -29,13 +29,11 @@ A reputation system can improve privacy.
 The reputation system can be used to indentify nodes with high flow of data traffic.
 These nodes can be used as a hop to send data to a destination.
 Because the nodes have more cover traffic, they will provide more privacy\cite{acquisti-economics}.
-In the absense of high traffic and high collaboration MultiChain should balance punishment of freeriding
+In the absense of high traffic and high collaboration, MultiChain should balance punishment of freeriding
 with the wish for using the freeriding traffic as cover traffic to increase privacy\cite{dingledine-reputation}.
 
 In the future we recommend to be able to transfer reputation using cryptographic functions in a new type of block: a transfer block.
-This transfer block identifies a portion of reputation to transfer from one entity to another.
-This make the reputation fungible and provide better safegaurds~\cite{acquisti-economics}, like forward anonymity.
+This transfer block identifies a portion of reputation and transfers this from one entity to another.
+This makes the reputation fungible and provide better safegaurds~\cite{acquisti-economics}, like forward anonymity.
 Reputation can be earned and spend in an other place.
 Reputation mining can be performed by collaborating with other peers.
-
-
