--- a/experimentation/speeds/speeds-experiment.tex
+++ b/experimentation/speeds/speeds-experiment.tex
@@ -1,11 +1,10 @@
 \subsection{Tracking downloads with different speeds}
-In this experiment we measure if MultiChain can correctly track the upload and download amounts
+In this synthetic experiment we measure if MultiChain can correctly track the upload and download amounts
 between two peers with different speeds.
 In this scenario a file of 100 MB is downloaded repeatedly at different speeds,
 respectively 500 KB/s, 750 KB/s, 1000 KB/s, 1250 KB/s, 2000 KB/s, and 3000 KB/s.
 The maximum speed of anonymous download was measured in experiments to be 1150 KB/s~\cite{ruigrok-anonymous}.
 The upload and download of the file is done by different pairs of seeders and downloaders.
-The method of reporting data transfer to the scheduler is identical to the experiment in subsection \ref{subsect-chain-exp}.
 
 \begin{figure}
 \centerline{\includegraphics[scale=0.5]{experimentation/speeds/synthetic-simple-down.eps}}
