--- a/experimentation/unittests.tex
+++ b/experimentation/unittests.tex
@@ -36,7 +36,7 @@ Total      & 672 &              & 47           &
 \end{table}
 
 \subsection{Gumby}
-
+\label{subsect:gumby}
 Next to that, Tribler uses a homemade testing environment Gumby.
 Gumby can start multiple instances of Tribler and follow test scenarios.
 Gumby can be used to perform system tests and experiments.
