--- a/preface.tex
+++ b/preface.tex
@@ -7,7 +7,7 @@ is only rivaled by the speculation of the enormous possibilities
 of the underlying technology, the block chain.
 The block chain is the first technology, seen with real world adoption,
 that allows to register transactions without a trusted third party.
-The block chain has several limitations in scalability
+The block chain has several limitations in scalabillity
 that will limit Bitcoin in fully replacing traditional currency.
 It also limits block chain as a scalable base for a large scale reputation system,
 similar to a digital currency, with vast amounts of transactions.
@@ -29,7 +29,7 @@ Rob Ruigrok was doing his master's thesis at the same time
 and helped me to avoid problems he encountered before I experienced them as well and
 I am grateful for this help.
 I am also very thankful for the companionship I felt within my work room 
-and I would like to thank especially Hans van den Bogert BSc, Niels Doekemeijer BSc and Ernst van der Hoeven BSc.
+and I would like to thank especially Hans van den Bigot BSc, Niels Doekemeijer BSc and Ernst van der Hoeven BSc.
 You certainly made my work more enjoyable.
 
 \vspace{1\baselineskip}
